Fix checkbox visibility

--- a/src/components/admin/QuizBuilder/QuizBuilder.scss
+++ b/src/components/admin/QuizBuilder/QuizBuilder.scss
@@ -33,6 +33,7 @@
   width: 1px;
   height: 1px;
   position: absolute;
+  opacity: 0;
 }
 
 .toggle-check-text {
